--- a/asli/html.html
+++ b/asli/html.html
@@ -63,15 +63,15 @@
     </div>
 
     <div class="contentt">
-        <h2>Web Development With HTML and CSS</h2>
+        <h2>Web Development With HTML and CSS.</h2>
         <h3>What will your kid learn?</h3>
         <p>In Web Development program for kids, your child will learn to:</p>
 
         <ul class="listt">
-            <li>Introduction to Webpage designing</li>
-            <li>Get familier with Front end development</li>
-            <li>Think creatively and creat their first website</li>
-            <li>Give content and style their websites</li>
+            <li>Introduction to Webpage designing.</li>
+            <li>Get familier with Front end development.</li>
+            <li>Think creatively and creat their first website.</li>
+            <li>Give content and style their websites.</li>
         </ul>
         <a href="registration.php"><button class="hero-btn book">Get Started</button></a>
     </div>
