--- a/asli/javascript.html
+++ b/asli/javascript.html
@@ -68,11 +68,11 @@
         <p>In JavaScript programming for kids, your child will learn to:</p>
 
         <ul class="listt">
-            <li>Start with text based programming</li>
-            <li>JavaScript syntax</li>
-            <li>coding fundamentals such as variables, loops, and if/then statements</li>
+            <li>Start with text based programming.</li>
+            <li>JavaScript syntax.</li>
+            <li>coding fundamentals such as variables, loops, and if/then statements.</li>
             <li> From there, they progress to working with graphics and eventually to building games.</li>
-            <li>Combine JavaScript with Web Development</li>
+            <li>Combine JavaScript with Web Development.</li>
         </ul>
         <a href="registration.php"><button class="hero-btn book">Get Started</button></a>
     </div>
