--- a/asli/python.html
+++ b/asli/python.html
@@ -68,8 +68,8 @@
         <p>In Python programming for kids, your child will learn to:</p>
 
         <ul class="listt">
-            <li>Start with text based programming</li>
-            <li>coding fundamentals such as variables, loops, and if/then statements</li>
+            <li>Start with text based programming.</li>
+            <li>coding fundamentals such as variables, loops, and if/then statements.</li>
             <li> From there, they progress to working with graphics and eventually to building games.</li>
         </ul>
         <a href="registration.php"><button class="hero-btn book">Get Started</button></a>
