--- a/asli/tinker.html
+++ b/asli/tinker.html
@@ -68,9 +68,9 @@
         <p>In Game DEvelopment program for kids, your child will learn to:</p>
 
         <ul class="listt">
-            <li>Code without writing a code</li>
-            <li>Create their own stories, games, and animations</li>
-            <li>Think creatively in their own coding ideas</li>
+            <li>Code without writing a code.</li>
+            <li>Create their own stories, games, and animations.</li>
+            <li>Think creatively in their own coding ideas.</li>
         </ul>
         <a href="registration.php"><button class="book">learn more</button></a>
     </div>
