--- a/asli/Scratch.html
+++ b/asli/Scratch.html
@@ -68,9 +68,9 @@
         <p>In Game Development program for kids, your child will learn to:</p>
 
         <ul class="listt">
-            <li>Code without writing a code</li>
-            <li>Create their own stories, games, and animations</li>
-            <li>Think creatively in their own coding ideas</li>
+            <li>Code without writing a code.</li>
+            <li>Create their own stories, games, and animations.</li>
+            <li>Think creatively in their own coding ideas.</li>
         </ul>
         <a href="registration.php"><button class="hero-btn book">Get Started</button></a>
     </div>
@@ -89,15 +89,15 @@
         <h3>First Project:</h3>
         <p>Animate their name with dancing letters.</p>
         <h3>2nd Project:</h3>
-        <p>Animate their name with dancing letters.</p>
+        <p>Catching Ball Game.</p>
         <h3>Third Project:</h3>
-        <p>Animate their name with dancing letters.</p>
+        <p>Dodge Game.</p>
         <h3>Fourth Project:</h3>
-        <p>Animate their name with dancing letters.</p>
+        <p>Boat Racing Game.</p>
         <h3>Fifth Project:</h3>
-        <p>Animate their name with dancing letters.</p>
+        <p>Giga and Enemy Game.</p>
         <h3>Final Project:</h3>
-        <p>Animate their name with dancing letters.</p>
+        <p>Pacman Game.</p>
 
         <a href="registration.php"><button class="hero-btn bookk">Get Started</button></a>
     </div>
