--- a/asli/Scratch.html
+++ b/asli/Scratch.html
@@ -72,7 +72,7 @@
             <li>Create their own stories, games, and animations.</li>
             <li>Think creatively in their own coding ideas.</li>
         </ul>
-        <a href="registration.php"><button class="hero-btn book">Get Started</button></a>
+        <a href="registration.php"><button class="hero-btn book">Enroll Now</button></a>
     </div>
 
 </section>
@@ -99,7 +99,7 @@
         <h3>Final Project:</h3>
         <p>Pacman Game.</p>
 
-        <a href="registration.php"><button class="hero-btn bookk">Get Started</button></a>
+        <a href="registration.php"><button class="hero-btn bookk">Enroll Now</button></a>
     </div>
 
 </section>
