--- a/asli/html.html
+++ b/asli/html.html
@@ -73,7 +73,7 @@
             <li>Think creatively and creat their first website.</li>
             <li>Give content and style their websites.</li>
         </ul>
-        <a href="registration.php"><button class="hero-btn book">Get Started</button></a>
+        <a href="registration.php"><button class="hero-btn book">Enroll Now</button></a>
     </div>
 
 </section>
@@ -100,7 +100,7 @@
         <h3>Final Project:</h3>
         <p>A school website.</p>
 
-        <a href="registration.php"><button class="hero-btn bookk">Get Started</button></a>
+        <a href="registration.php"><button class="hero-btn bookk">Enroll Now</button></a>
     </div>
 
 </section>
