--- a/asli/thunkable.html
+++ b/asli/thunkable.html
@@ -73,7 +73,7 @@
             <li>What are the different phone sensors and how they are used in the applications?</li>
             <li>How do you use and implement different platform components to achieve a project idea?</li>
         </ul>
-        <a href="registration.php"><button class="hero-btn book">Get Started</button></a>
+        <a href="registration.php"><button class="hero-btn book">Enroll Now</button></a>
     </div>
 
 </section>
@@ -99,7 +99,7 @@
         <p>We will work on understanding the concept of text-to-speech, how a phone can talk to us, and about Y translator. We will then use the previous knowledge of speech recognition to build an app that listens to our speech and translates it.</p>
         
 
-        <a href="registration.php"><button class="hero-btn bookk">Get Started</button></a>
+        <a href="registration.php"><button class="hero-btn bookk">Enroll Now</button></a>
     </div>
 
 </section>
