--- a/asli/tinker.html
+++ b/asli/tinker.html
@@ -59,20 +59,20 @@
 <section class="aboutt" id="aboutt">
 
     <div class="image">
-        <img src="images/Scratch.png" alt="">
+        <img src="images/tinkercad.png" alt="">
     </div>
 
     <div class="contentt">
-        <h2>Game Development With Scratch</h2>
+        <h2>3D Modelling with Tinker CAD</h2>
         <h3>What will your kid learn?</h3>
-        <p>In Game DEvelopment program for kids, your child will learn to:</p>
+        <p>In 3D Modelling for kids, your child will learn to:</p>
 
         <ul class="listt">
-            <li>Code without writing a code.</li>
-            <li>Create their own stories, games, and animations.</li>
-            <li>Think creatively in their own coding ideas.</li>
+            <li>Create 3D designs of their own.</li>
+            <li>Deal with electric circuits.</li>
+            <li>Think creatively in 3D Modelling world.</li>
         </ul>
-        <a href="registration.php"><button class="book">learn more</button></a>
+        <a href="registration.php"><button class="book">Enroll Now</button></a>
     </div>
 
 </section>
@@ -99,7 +99,7 @@
         <h3>Final Project:</h3>
         <p>Animate their name with dancing letters.</p>
 
-        <a href="registration.php"><button class="hero-btn bookk">learn more</button></a>
+        <a href="registration.php"><button class="hero-btn bookk">Enroll Now</button></a>
     </div>
 
 </section>
