--- a/asli/javascript.html
+++ b/asli/javascript.html
@@ -74,7 +74,7 @@
             <li> From there, they progress to working with graphics and eventually to building games.</li>
             <li>Combine JavaScript with Web Development.</li>
         </ul>
-        <a href="registration.php"><button class="hero-btn book">Get Started</button></a>
+        <a href="registration.php"><button class="hero-btn book">Enroll Now</button></a>
     </div>
 
 </section>
@@ -101,7 +101,7 @@
         <h3>Final Project:</h3>
         <p>JavaScript Snake Game.</p>
 
-        <a href="registration.php"><button class="hero-btn bookk">Get Started</button></a>
+        <a href="registration.php"><button class="hero-btn bookk">Enroll Now</button></a>
     </div>
 
 </section>
