--- a/asli/python.html
+++ b/asli/python.html
@@ -72,7 +72,7 @@
             <li>coding fundamentals such as variables, loops, and if/then statements.</li>
             <li> From there, they progress to working with graphics and eventually to building games.</li>
         </ul>
-        <a href="registration.php"><button class="hero-btn book">Get Started</button></a>
+        <a href="registration.php"><button class="hero-btn book">Enroll Now</button></a>
     </div>
 
 </section>
@@ -99,7 +99,7 @@
         <h3>Final Project:</h3>
         <p>The “Caesar Cipher” project in Python helps students in understanding the concept of encryption/decryption.  During World War I and II, cryptography techniques were used to successfully send secret messages..</p>
 
-        <a href="registration.php"><button class="hero-btn bookk">Get Started</button></a>
+        <a href="registration.php"><button class="hero-btn bookk">Enroll Now</button></a>
     </div>
 
 </section>
