--- a/asli/Scratch.html
+++ b/asli/Scratch.html
@@ -162,7 +162,7 @@
 
     </div>
 
-    <h1 class="Credit">created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="Credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
 
 </div>
 
