--- a/asli/services.html
+++ b/asli/services.html
@@ -163,7 +163,7 @@
 
     </div>
 
-    <h1 class="Credit">created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="Credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
 
 </div>
 
