--- a/asli/enroll.html
+++ b/asli/enroll.html
@@ -57,7 +57,7 @@
 			<h4>
 				One Platform for all Courses. 
 			</h4>
-			<p class="text">To start learning how to code, we offer different courses with five segments: Scratch, Thunkable,Front End Development, JavaScript and Python.  Every student starts with an initial skills assessment to help place them in the correct course according to age and skill level!</p>
+			<p class="text">To start learning how to code, we offer different courses with Six segments: Scratch, Thunkable,Front End Development, JavaScript, Python and Tinker CAD.  Every student starts with an initial skills assessment to help place them in the correct course according to age and skill level!</p>
 		</div><!--service-card-->
 
 		<div class="service-card bg-dark">
