--- a/asli/enroll.html
+++ b/asli/enroll.html
@@ -218,7 +218,7 @@ Its too easy! And too user-friendly, making every other CAD or 3D program seem a
 
     </div>
 
-    <h1 class="credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="credit">&#169 Copyright<a href="#"> KashKoding 2021.</a> All Rights Reserved . </h1>
 
 </div>
 
