--- a/asli/index.html
+++ b/asli/index.html
@@ -60,7 +60,7 @@
    <div class="dev2">
        <h1>#1 Koshur Coding Platform for Kids</h1>
        <h2 text-align="center">Transforming the traditional education of Kashmir to empower students with new generation skills via Classroom and Online atmosphere</h2>
-        <a href="" class="hero-btn">Know More</a>
+        <a href="know.html" class="hero-btn">Get Started</a>
     </div>    
    <div class="dev">
        <h1>Website Development Services</h1>
@@ -287,7 +287,7 @@
 
     </div>
 
-    <h1 class="credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="credit">&#169 Copyright<a href="#"> KashKoding 2021.</a> All Rights Reserved . </h1>
 
 </div>
 
