--- a/asli/javascript.html
+++ b/asli/javascript.html
@@ -164,7 +164,7 @@
 
     </div>
 
-    <h1 class="credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="credit">&#169 Copyright<a href="#"> KashKoding 2021.</a> All Rights Reserved . </h1>
 
 </div>
 
