--- a/asli/about.html
+++ b/asli/about.html
@@ -129,7 +129,7 @@
 
     </div>
 
-    <h1 class="credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="credit">&#169 Copyright<a href="#"> KashKoding 2021.</a> All Rights reserved . </h1>
 
 </div>
 
