--- a/asli/curriculum.html
+++ b/asli/curriculum.html
@@ -247,7 +247,7 @@ smartphones and how to use them in various applications.</p>
 
     </div>
 
-    <h1 class="credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="credit">&#169 Copyright<a href="#"> KashKoding 2021.</a> All Rights Reserved . </h1>
 
 </div>
 
