--- a/asli/python.html
+++ b/asli/python.html
@@ -162,7 +162,7 @@
 
     </div>
 
-    <h1 class="Credit">created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="credit">&#169 Copyright<a href="#"> KashKoding 2021.</a> All Rights Reserved . </h1>
 
 </div>
 
