--- a/asli/index.html
+++ b/asli/index.html
@@ -57,11 +57,12 @@
 <section class="header" id="header">
 
 <div class="text-box">
+     
    <div class="dev2">
        <h1>#1 Koshur Coding Platform for Kids</h1>
-       <h2 text-align="center">Transforming the traditional education of Kashmir to empower students with new generation skills via Classroom and Online atmosphere</h2>
-       <a href="know.html" class="hero-btn" >Get Started</a>
-   </div>    
+       <h2>Transforming the traditional education of Kashmir to empower students with new generation skills via Classroom and Online atmosphere</h2>
+       <a href="know.html" class="book" >Get Started</a>
+  </div>  
    <div class="dev">
        <h1>Website Development Services</h1>
        <h2>Where you have a vision, we have a professional team to breathe life into it</h2>
