--- a/asli/index.html
+++ b/asli/index.html
@@ -61,7 +61,7 @@
    <div class="dev2">
        <h1>#1 Koshur Coding Platform for Kids</h1>
        <h2>Transforming the traditional education of Kashmir to empower students with new generation skills via Classroom and Online atmosphere</h2>
-       <a href="know.html" class="hero-btnn" >Get Started</a>
+       <a href="know.html" class="hero-btn" >Get Started</a>
   </div>  
    <div class="dev">
        <h1>Website Development Services</h1>
