--- a/asli/team.html
+++ b/asli/team.html
@@ -27,7 +27,7 @@
 <header>
 
     
-      <a href="#" class="logo"><img class="logo2" src="images/KashLogo.png" alt=""></a>
+<a href="index.html" class="logo"><img class="logo2" src="images/KashLogo.PNG" alt=""></a>
 
     <nav>
            <a href="index.html"></a>
@@ -73,9 +73,9 @@
 			<div class="info">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum adipisci impedit sit porro ut cumque quisquam culpa! Vero reiciendis est deserunt maxime vitae voluptatum.</p>
 				<div>
-                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="https://www.facebook.com/adfar.rashid.52" class="fa fa-facebook"></a>
                     <a href="#" class="fa fa-twitter"></a> 
-                    <a href="#" class="fa fa-linkedin"></a>  
+                    <a href="https://www.linkedin.com/in/adfar-rasheed-b16649206/" class="fa fa-linkedin"></a>  
                 </div>
                 
 			</div>
