--- a/asli/courses.html
+++ b/asli/courses.html
@@ -27,7 +27,7 @@
 <header>
 
     
-      <a href="#" class="logo"><img class="logo2" src="images/KashLogo.png" alt=""></a>
+    <a href="index.html" class="logo"><img class="logo2" src="images/KashLogo.PNG" alt=""></a>
 
     <nav>
            <a href="index.html"></a>
