--- a/asli/courses.html
+++ b/asli/courses.html
@@ -167,20 +167,20 @@
 
         <div class="box">
             <h3>Languages we teach</h3>
-            <a href="#">Scratch</a>
-            <a href="#">thnkable</a>
-            <a href="#">HTML and CSS</a>
-            <a href="#">JavaScript</a>
-            <a href="#">Python</a>
+            <a href="Scratch.html">Scratch</a>
+            <a href="thunkable.html">thnkable</a>
+            <a href="html.html">HTML and CSS</a>
+            <a href="javascript.html">JavaScript</a>
+            <a href="python.html">Python</a>
         </div>
 
         <div class="box">
             <h3>Quick Links</h3>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Course</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="courses.html">Course</a>
+            <a href="know.html">Why Choose Us</a>
+            <a href="contact.html">Contact</a>
         </div>
 
         <div class="box">
