--- a/asli/curriculum.html
+++ b/asli/curriculum.html
@@ -78,7 +78,7 @@
              <h3 class="ch3">✅ Block-based coding</h3>
              <h3 class="ch3">✅ Loops,variables</h3>
              <h3 class="ch3">✅ Play Lab</h3>
-		     <h3 class="ch3">✅ Fee: 5500</h3>
+		     <h3 class="ch3">✅ Fee: 6000</h3>
 		
 
         </div>
@@ -90,18 +90,18 @@
             <h3 class="ch3">✅ Function,commands</h3>
 		    <h3 class="ch3">✅ Sequencing, algorithms</h3>
             <h3 class="ch3">✅ Sprite Lab</h3>
-		    <h3 class="ch3">✅ Fee: 5500</h3>
+		    <h3 class="ch3">✅ Fee: 6000</h3>
 
         </div>
         <div class="inner">
            <h1 class="ch1">Python-Basic</h1>
            <h3 class="ch3">✅ Total 28 Classes</h3>
-           <h3 class="ch3">✅ Text-based coding</h3>
            <h3 class="ch3">✅ 2 Classes per week</h3>
+           <h3 class="ch3">✅ Text-based coding</h3>
            <h3 class="ch3">✅ Different data types.</h3>
            <h3 class="ch3">✅ Syntax-based coding</h3>
-		   <h3 class="ch3">✅ Fee: 5500</h3>
 		   <h3 class="ch3">✅ Loops and Conditions</h3>
+		   <h3 class="ch3">✅ Fee: 6000</h3>
         </div>
 	  <h2>Outcome</h2>
 	  <p>Students will learn basic programming constructs and get comfortable with commands, sequencing, drag-and-drop functions. They will also use the concept of time and direction and will improve their logical thinking by working on various Scratch projects and Students will be learn inter-relation between block-based coding and text code.</p>
@@ -128,7 +128,7 @@
         <h3 class="ch3">✅ User interfaces, buttons</h3>
         <h3 class="ch3">✅ Sensors, labels</h3>
 		<h3 class="ch3">✅ Speech recognition</h3>
-		<h3 class="ch3">✅ Fee: 5500</h3>
+		<h3 class="ch3">✅ Fee: 6000</h3>
 
       </div>
       <div class="inner">
@@ -138,7 +138,7 @@
         <h3 class="ch3">✅ Start 3d modelling</h3>
         <h3 class="ch3">✅ Create circuits</h3>
         <h3 class="ch3">✅ Print 3D objects</h3>
-		<h3 class="ch3">✅ Fee: 5500</h3>
+		<h3 class="ch3">✅ Fee: 6000</h3>
 
       </div>
       <div class="inner">
@@ -148,7 +148,7 @@
         <h3 class="ch3">✅ App Development</h3>
         <h3 class="ch3">✅ Drawer, navigator</h3>
 		<h3 class="ch3">✅ Barcode scanner,</h3>
-		<h3 class="ch3">✅ Fee: 5500</h3>
+		<h3 class="ch3">✅ Fee: 6000</h3>
 
       </div>
 	            <h2>Outcome</h2>
@@ -175,7 +175,7 @@
         <h3 class="ch3">✅ Text-based coding</h3>
         <h3 class="ch3">✅ Web pages</h3>
         <h3 class="ch3">✅ Static websites</h3>
-		<h3 class="ch3">✅ Fee: 5500</h3>
+		<h3 class="ch3">✅ Fee: 6000</h3>
 
       </div>
       <div class="inner">
@@ -186,7 +186,7 @@
         <h3 class="ch3">✅ Syntax guide</h3>
         <h3 class="ch3">✅ Functions and Objects</h3>
 		<h3 class="ch3">✅ Combine with HTML </h3>
-		<h3 class="ch3">✅ Fee: 5500</h3>
+		<h3 class="ch3">✅ Fee: 6000</h3>
 
       </div>
       <div class="inner">
@@ -197,7 +197,7 @@
         <h3 class="ch3">✅ Local Database</h3>
 		<h3 class="ch3">✅ Sign-in features</h3>
         <h3 class="ch3">✅ Animations </h3>
-		<h3 class="ch3">✅ Fee: 5500</h3>
+		<h3 class="ch3">✅ Fee: 6000</h3>
 
       </div>
 	    <h2>Outcome</h2>
@@ -234,7 +234,7 @@ smartphones and how to use them in various applications.</p>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="courses.html">Course</a>
-            <a href="#">Blog</a>
+            <a href="know.html">Why Choose Us</a>
             <a href="contact.html">Contact</a>
         </div>
 
