--- a/asli/know.html
+++ b/asli/know.html
@@ -51,13 +51,23 @@
 
 <!-- header section ends -->
 
-    
+<section class="free">
+    <div>
+        <h1>#1 Koshur coding platform for kids</h1>
+        <h3>Get free Classes </h3>
+        <a href="registration.php" class="hero-btn">Book Now</a>
+    </div>
+
+</section>    
    
+
+
+
 
 <section class="know" id="know">
     <div class="more">
              <div class="know-more">
-                 <h1>Our Core Belief</h1>
+                 <h1>Our Vision</h1>
                  <p>We deeply believe in nurturing the hidden potential which kids 
                      innately have. Our adeptly crafted programs complement the
                       school curriculum to fuel the latent talents of your children 
@@ -154,7 +164,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="courses.html">Course</a>
-            <a href="#">Blog</a>
+            <a href="know.html">Why Choose Us</a>
             <a href="contact.html">Contact</a>
         </div>
 
