--- a/asli/enroll.html
+++ b/asli/enroll.html
@@ -53,7 +53,7 @@
 	<div class="service-wrp-inner">
 
 		<div class="service-card bg-dark head">
-			<img src="images/img-1.png" alt="">
+			<img src="images/KashLogo.PNG" alt="">
 			<h4>
 				One Platform for all Courses. 
 			</h4>
@@ -205,7 +205,7 @@ Its too easy! And too user-friendly, making every other CAD or 3D program seem a
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="courses.html">Course</a>
-            <a href="#">Blog</a>
+            <a href="know.html">Why Choose Us</a>
             <a href="contact.html">Contact</a>
         </div>
 
