--- a/asli/index.html
+++ b/asli/index.html
@@ -29,7 +29,7 @@
 <header>
 
 
-      <a href="index.html" class="logo"><img class="logo2" src="images/KashLogo.PNG" alt=""></a>
+    <a href="index.html" class="logo"><img class="logo2" src="images/KashLogo.PNG" alt=""></a>
 
     <nav>
            <a href="index.html"></a>
@@ -66,7 +66,7 @@
    <div class="dev">
        <h1>Website Development Services</h1>
        <h2>Where you have a vision, we have a professional team to breathe life into it</h2>
-       <a href="" class="hero-btn" >Get Started</a>
+       <a href="get.html" class="hero-btn" >Get Started</a>
   </div>
  </div>
 
@@ -275,7 +275,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="courses.html">Course</a>
-            <a href="#">Blog</a>
+            <a href="know.html">Why Choose Us</a>
             <a href="contact.html">Contact</a>
         </div>
 
