--- a/asli/team.html
+++ b/asli/team.html
@@ -189,7 +189,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="courses.html">Course</a>
-            <a href="#">Blog</a>
+            <a href="know.html">Why Choose Us</a>
             <a href="contact.html">Contact</a>
         </div>
 
