--- a/asli/index.html
+++ b/asli/index.html
@@ -77,9 +77,10 @@
 <!------Call to Action---->
 
 <section class="cta">
+    <div class="ctaa">
        <h1>Enroll your kids for our various <br> courses from anywhere in Kashmir.</h1>
        <a href="enroll.html" class="hero-btn">Enroll NOW</a>
-
+    </div>
 
 
 </section>
