--- a/asli/get.html
+++ b/asli/get.html
@@ -61,7 +61,7 @@
 </section>
 
 <section class="aboutc">
-    <h1>KashKoding</h1>
+    <h1>KashKoding Development</h1>
 <div class="sect">
     
     <div class="about-sec">
