--- a/asli/Scratch.html
+++ b/asli/Scratch.html
@@ -14,7 +14,7 @@
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">  
 
     <title>KashKoding</title>
 </head>
@@ -59,7 +59,7 @@
 <section class="aboutt" id="aboutt">
 
     <div class="image">
-        <img src="images/Scratch.png" alt="">
+        <img  src="images/Scratch.png" alt="">
     </div>
 
     <div class="contentt">
