--- a/asli/javascript.html
+++ b/asli/javascript.html
@@ -14,8 +14,8 @@
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
-
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">  
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">  
     <title>KashKoding</title>
 </head>
 <body>
