--- a/asli/team.html
+++ b/asli/team.html
@@ -15,7 +15,7 @@
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">  
     <title>KashKoding</title>
 </head>
 <body>
