--- a/asli/know.html
+++ b/asli/know.html
@@ -54,8 +54,9 @@
 <section class="free">
     <div>
         <h1>#1 Koshur coding platform for kids</h1>
-        <h3>Get free Classes </h3>
+        <h3>Live online classes to turn your kids into sharp thinkers and programmers</h3>
         <a href="registration.php" class="hero-btn">Book Now</a>
+        <h3>It's more than coding</h3>
     </div>
 
 </section>    
@@ -66,6 +67,26 @@
 
 <section class="know" id="know">
     <div class="more">
+            <div class="know-more">
+                 <h1>Kashmir without Coding</h1>
+                 <h2>While the skills of coding have revolutionized all the parts of globe</h2>
+                 <ul>
+                     <li>Kashmir has an unemployment rate higher than the average national unemployment rate.</li>
+                     <li>The gap between the logical and reasoning IQs of the kids from the valley versus outside of valley is increasing by the day due to the absence of curriculums updated to the needs of the present time.</li>
+                     <li>Majority of the opportunities of generating income after graduating high school and college lie in jobs unrelated to education or government sector.</li>
+                     <li>Youth of Kashmir are still suffering a great deal because of lack of appropriate private sector opportunities.</li>
+                     <li>Majority of the businesses still run offline and have trouble shifting their enterprises online.</li>
+                     <li>There is a drastic lack of web and application developers in the valley and this lack of tech savvy people is pushing Kashmir back by ages.</li>
+                 </ul>
+            </div>
+            <div class="know-more">
+                 <h1>Our Motto</h1>
+                 <p>KashKoding is an initiative of a professional engineer cum developer team dedicated to add a positive transformation in the quality of education in Kashmir.</p>
+                 <p>To eliminate unemployment by equipping kids in the primary schools today with skills that they can use in their life whenever need be.</p> 
+                 <p>To imbibe a coding consciousness into the education system of Kashmir.</p>
+                 <p>To equip children with life skills that traditional education has failed to avail.</p>
+                 <p>To stir a positive and dynamic change in the direction of contributing to the private sector of the valley.</p>
+            </div>
              <div class="know-more">
                  <h1>Our Vision</h1>
                  <p>We deeply believe in nurturing the hidden potential which kids 
@@ -82,14 +103,10 @@
                  <p>Whether you are a student interested in the IT careers that you could explore with a coding qualification or just fascinated by the world of tech and coding courses, KashKoding offers a wide range of online coding courses that make coding accessible to kids and young teenagers. We've put together a simple guide to answer some of the most commonly asked questions from parents and prospective students to help you understand the basics of what our kids programming courses cover, whether they are right for your kids and how best to navigate them.</p> 
             </div>
 
-            <div class="know-more">
-                 <h1>Kashmir without Coding in 2030?</h1>
-                 <p>Enroll your student in our highly acclaimed program that guarantees to advance his or her grade level in 4 months. With expertly crafted curriculum delivered by highly qualified, engaging teachers and extensive data collection, we are able to teach specifically to each student according to their needs. That, coupled with the ability for the entire program to be taken independently online, your child will benefit immensely from our classes and you will see those benefits translate to the classroom and beyond.</p>
-                 <p>Whether you are a student interested in the IT careers that you could explore with a coding qualification or just fascinated by the world of tech and coding courses, KashKoding offers a wide range of online coding courses that make coding accessible to kids and young teenagers. We've put together a simple guide to answer some of the most commonly asked questions from parents and prospective students to help you understand the basics of what our kids programming courses cover, whether they are right for your kids and how best to navigate them.</p> 
-            </div>
-
+            
             <div class="know-more">
                  <h1>Kashmir with Coding in 2030?</h1>
+                 
                  <p>Enroll your student in our highly acclaimed program that guarantees to advance his or her grade level in 4 months. With expertly crafted curriculum delivered by highly qualified, engaging teachers and extensive data collection, we are able to teach specifically to each student according to their needs. That, coupled with the ability for the entire program to be taken independently online, your child will benefit immensely from our classes and you will see those benefits translate to the classroom and beyond.</p>
                  <p>Whether you are a student interested in the IT careers that you could explore with a coding qualification or just fascinated by the world of tech and coding courses, KashKoding offers a wide range of online coding courses that make coding accessible to kids and young teenagers. We've put together a simple guide to answer some of the most commonly asked questions from parents and prospective students to help you understand the basics of what our kids programming courses cover, whether they are right for your kids and how best to navigate them.</p> 
             </div>
