--- a/asli/courses.html
+++ b/asli/courses.html
@@ -72,7 +72,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with the skills of front end development with the assistance of our experienced teachnical staff. Front-end web development is the develop- ment of the graphical user interface of a website, through the use of HTML, CSS, and JavaScript, so that users can view and interact with that website. Also known as client-side development is the practice of producing a website or Web Application so that a user can see and interact with them directly. </p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 
@@ -88,7 +88,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with the skills of back end development with the assistance of our experienced teachnical staff. Backend Development is also known as server-side development. It is everything that the users don’t see and contains behind-the-scenes activities that occur when performing any action on a website. It focuses primarily on databases, backend logic, APIs, and Servers. A backend developer is one who develops the products for the backend of any website.</p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 
@@ -104,7 +104,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with the skillset of C with the assistance of our experienced teachnical staff. C is a general-purpose, procedural computer programming language. It's widespread use and basic nature makes it an ideal choice to start learning programming from. C basically provides constructs that map efficiently to typical machine instructions. Which means it can be efficiently used in systems where applications are coded in assembly language.</p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 
@@ -121,7 +121,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with the skillset of JavaScript with the assistance of our experienced teachnical staff. JavaScript is one of many great coding languages for students used to communicate instructions to a computer.JavaScript is one of the main languages of the modern internet. it is best known for its use in web design, working alongside HTML/CSS to create powerful web experiences.</p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 
@@ -136,7 +136,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with the skillset of Python with the assistance of our experienced teachnical staff. Python is a programming language that reads like normal speech. Python is easy to learn. The commands and syntax in Python are relatively simple compared to some other programming languages. This makes our Python program for kids easy to get started even with no experience coding.Python is fun.</p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 
@@ -151,7 +151,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with circuit prototyping skills with our highly skilled instructors. Arduino is an open-source hardware and software company, project and user community that designs and manufactures single-board microcontrollers and microcontroller kits for building digital devices. You can build awesome projects. Arduino is great for programming. You can learn electronics easily</p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 	</div>
