--- a/asli/know.html
+++ b/asli/know.html
@@ -53,13 +53,13 @@
 
 <section class="free">
     <div>
-        <img class="imag" src="images/kid.jpg" alt="">
+        <img class="imag" src="images/kidd.jpg" alt="">
     </div>
     <div class="one">
         <h1>#1 Koshur coding platform for kids</h1>
         <h3>Live online classes to turn your kids into sharp thinkers and programmers</h3>
         <h5>"Walew now hecho khin"</h5>
-        <a href="registration.php" class="hero-btn">Book your free demo now</a>
+        <a href="registration.php" class="hero-btn">Book Your Free Demo Now</a>
         <h4>"It's more than just coding"</h4>
     </div>
 
@@ -155,7 +155,7 @@
 
 <!-- about section ends -->
 
-<section class="contact" id="contact">
+<section class="contact ser-contact" id="contact">
 
 <h1 class="heading">Contact Us</h1>
 
@@ -170,10 +170,7 @@
         <input type="submit" class="hero-btn" value="Send now">
     </form>
 
-    <div class="image">
-        <img src="images/contact-img.png" alt="">
-    </div>
-
+    
 </div>
 
 </section>
