--- a/asli/services.html
+++ b/asli/services.html
@@ -87,7 +87,7 @@
     <h2>Good websites get applause. Great websites get business.</h2>
     <h1>"</h1>
     <p>Don’t let your website be just another URL on the web. We can help it be a powerful marketing medium to attract prospective customers. As a website development company having created in developing creative, conversion focused websites, we are well-poised to help your business make a mark online.</p>
-    <a href="#"><button class="hero-btn">read more</button></a>
+    <a href="get.html"><button class="hero-btn">Explore Now</button></a>
   </div>
   <div class="image">
     <img src="images/mobilef.svg" alt="">
@@ -119,10 +119,7 @@
         <textarea name="" id="" cols="30" rows="10" class="box address" placeholder="your message"></textarea>
         <input type="submit" class="hero-btn" value="Send now">
     </form>
-    <div class="image">
-        <img src="images/contact-img.png" alt="">
-    </div>
-
+  
 </div>
 
 </section>
