--- a/asli/get.html
+++ b/asli/get.html
@@ -52,6 +52,9 @@
 <!-- header section ends -->
  
 <section class="intro">
+    <div>
+        <img class="imag" src="images/vision.jpg" alt="">
+    </div>
      <div class="introtext">
         <h1>You have a vision, we've got super powers </h1>
         <h2>Don't waste your valuable time with projects that just 'aren't you'</h2>
@@ -65,21 +68,25 @@
 <div class="sect">
     
     <div class="about-sec">
+        <img src="images/development.png" alt="">
         <h2>Design</h2>
         <p>We plan and design websites that are easy to interact with and are appealing to the eye</p>
 
      </div>
      <div class="about-sec">
+         <img src="images/enthusiast.png" alt="">
         <h2>Passion</h2>
         <p>Our team works diligently on the products to meet the client requirements</p>
 
      </div>
-     <div class="about-sec">
+     <div class="about-sec">\
+         <img src="images/responsive.png" alt="">
         <h2>Responsive</h2>
         <p>Our websites are responsive to changes in resolution and can be viewed on any device</p>
 
      </div>
      <div class="about-sec">
+         <img src="images/website.png" alt="">
         <h2>Support</h2>
         <p>Our dedicated team will support your endeavour untill the product is ready</p>
 
@@ -102,14 +109,14 @@
         <img width="100px" height="100px" src="images/adfar.jpg" alt="">
         <h2>Mohammad Idress</h2>
         <h3>Web Designer</h3>
-        <p>"Hello, I design the website as per the requirement of the client. I sketch the elements and design the UI/UX for the website."</p>
+        <p>"Hello, I design the website as per the requirement of the client. I design the UI/UX for the website."</p>
         <a href="" class="hero-btnn">Contact</a>
     </div>
      <div class="dev-sec">
         <img width="100px" height="100px" src="images/adfar.jpg" alt="">
         <h2>Zubair Rasool</h2>
         <h3>Front End Developer</h3>
-        <p>"Hi, my part is to debug any issues in the layout and appearance of the website. I turn the websites into responsive ones."</p>
+        <p>"Hi, my part is to debug any issues in the appearances of the website. I turn the websites into responsive ones."</p>
         <a href="" class="hero-btnn">Contact</a>
     </div>
      <div class="dev-sec">
@@ -129,27 +136,32 @@
     <h1>We offer </h1>
 <div class="servi">
    <div class="dev-serv">
+       <img src="images/websit.png" alt="">
         <h2>Web Development</h2>
         <p>We build stable, reliable and secure websites that add value to the user. We create websites for schools, colleges, commercial noncommercial start-ups, businesses, social circles, tech teams and much more.</p>
 
      </div>
      <div class="dev-serv">
+         <img src="images/product.png" alt="">
         <h2>Product Development</h2>
         <p>We build product development strategies that help the users find their target product-market. This includes all the website strategies, app development or social media initialisation strategies.</p>
 
      </div>
      <div class="dev-serv">
+         <img src="images/database.png" alt="">
         <h2>Database Management</h2>
         <p>We create and manage the data of the user. We can automate the process of storing the user's data or link their website to an online or offline database.</p>
 
      </div>
      <div class="dev-serv">
+        <img src="images/cloud.png" alt="">
         <h2>Cloud Management</h2>
         <p>We manage cloud computing services for the user. We can take a user's website over a cloud and they can enjoy their own server space.</p>
 
      </div>
 
     <div class="dev-serv">
+        <img src="images/application.png" alt="">
         <h2>Application Development</h2>
         <p>We offer safe and reliable app development services. This service may or may not be available at the moment. Please reach out.</p>
 
@@ -158,7 +170,7 @@
 
 </section>
 
-<section class="contact" id="contact">
+<section class="contact ser-contact" id="contact">
 
 <h1 class="heading">Contact Us</h1>
 
@@ -173,9 +185,7 @@
         <input type="submit" class="hero-btn" value="Send now">
     </form>
 
-    <div class="image">
-        <img src="images/contact-img.png" alt="">
-    </div>
+    
 
 </div>
 
