--- a/asli/index.html
+++ b/asli/index.html
@@ -53,7 +53,7 @@
 <!-- header section ends -->
 
 <!-- header2 section starts  -->
-
+<!----
 <section class="header" id="header">
 
 <div class="text-box">
@@ -70,11 +70,38 @@
   </div>
  </div>
 
+ 
+ 
+</section>
+---->
+    <section class="free">
+    <div>
+        <img class="imag" src="images/kid.jpg" alt="">
+    </div>
+    <div class="one">
+        <h1>#1 Koshur Coding Platform for Kids</h1>
+        <h3>Transforming the traditional education of Kashmir to empower students with new generation skills via Online atmosphere</h3>
+        <a href="know.html" class="hero-btn">Get Started</a>
+        <h4>"It's more than just coding"</h4>
+    </div>
 
+</section>  
 
-    </section>
-    <hr class="hrr">
-<!------Call to Action---->
+<section class="free">
+    
+    <div class="one">
+        <h1>#1 Website Development Services</h1>
+        <h3>Where you have a vision, we have a professional team to breathe life into it</h3>
+        <a href="know.html" class="hero-btn">Get Started</a>
+        <h4>"Let us give life to your idea"</h4>
+    </div>
+
+    <div>
+        <img class="imag" src="images/design.jpg" alt="">
+    </div>
+
+</section>  
+<!------Call to Action----
 
 <section class="cta">
     <div class="ctaa">
@@ -84,7 +111,7 @@
 
 
 </section>
-<hr class="hrr">
+-->
 <!-- about section starts  -->
 
 <section class="about" id="about">
@@ -97,7 +124,7 @@
         <h3>Who are we?</h3>
         <p>We are a team of engineers and educators who have come together to bring a change. Shift the waves. Change the paradigm. Ready the new generation for the world they are going to face. Having witnessed and suffered through the absence of tech sector in the valley, we have taken to the helm and we envision a change that will spark a chain reaction. Never shall the youth suffer because of lack of tech companies in valley, if we rise and create opportunities today.</p>
         <p>We have a catalogue of diverse professionals from various backgrounds at our disposal. These include full-stack developers, game developers, app developers, international coding educators and engineers of computer science and electronics backgrounds. We have pledged to become the change that we want to see in our kashmir :)</p>
-        <a href="team.html"><button class="hero-btn book">Meet Our Team</button></a>
+        <a href="team.html"><button class="hero-btn">Meet Our Team</button></a>
     </div>
 
 </section>
@@ -135,7 +162,7 @@
     <h2>Good websites get applause. Great websites get business.</h2>
     <h1>"</h1>
     <p>Don’t let your website be just another URL on the web. We can help it be a powerful marketing medium to attract prospective customers. As a website development company having created in developing creative, conversion focused websites, we are well-poised to help your business make a mark online.</p>
-    <a href="#"><button class="hero-btn">read more</button></a>
+    <a href="get.html"><button class="hero-btn">Explore Now </button></a>
   </div>
   <div class="image">
     <img src="images/mobilef.svg" alt="">
@@ -148,7 +175,7 @@
 
 </section>
 
-<hr class="hrr">
+
 
 <!-- service section ends -->
 
@@ -158,6 +185,7 @@
 
 
  <section class="service-wrp">
+     <h1 class="heading">Our Courses</h1>
 	<div class="service-wrp-inner">
 		<div class="service-card bg-dark">
 			<div class="d-flex">
@@ -171,7 +199,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with the skills of front end development with the assistance of our experienced teachnical staff. Front-end web development is the develop- ment of the graphical user interface of a website, through the use of HTML, CSS, and JavaScript, so that users can view and interact with that website. Also known as client-side development is the practice of producing a website or Web Application so that a user can see and interact with them directly. </p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 
@@ -187,7 +215,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with the skills of back end development with the assistance of our experienced teachnical staff. Backend Development is also known as server-side development. It is everything that the users don’t see and contains behind-the-scenes activities that occur when performing any action on a website. It focuses primarily on databases, backend logic, APIs, and Servers. A backend developer is one who develops the products for the backend of any website.</p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 
@@ -203,7 +231,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with the skillset of C with the assistance of our experienced teachnical staff. C is a general-purpose, procedural computer programming language. It's widespread use and basic nature makes it an ideal choice to start learning programming from. C basically provides constructs that map efficiently to typical machine instructions. Which means it can be efficiently used in systems where applications are coded in assembly language.</p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 
@@ -218,7 +246,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with the skillset of JavaScript with the assistance of our experienced teachnical staff. JavaScript is one of many great coding languages for students used to communicate instructions to a computer.JavaScript is one of the main languages of the modern internet. it is best known for its use in web design, working alongside HTML/CSS to create powerful web experiences.</p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 
@@ -233,7 +261,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with the skillset of Python with the assistance of our experienced teachnical staff. Python is a programming language that reads like normal speech. Python is easy to learn. The commands and syntax in Python are relatively simple compared to some other programming languages. This makes our Python program for kids easy to get started even with no experience coding.Python is fun.</p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll NOw</a>
 			</div>
 		</div><!--service-card-->
 
@@ -248,7 +276,7 @@
 			</div>
 			<div class="info">
 				<p>Equip yourself with circuit prototyping skills with our highly skilled instructors. Arduino is an open-source hardware and software company, project and user community that designs and manufactures single-board microcontrollers and microcontroller kits for building digital devices. You can build awesome projects. Arduino is great for programming. You can learn electronics easily</p>
-				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
+				<a href="registration.php" class="hero-btn">Enroll Now</a>
 			</div>
 		</div><!--service-card-->
 
