--- a/asli/index.html
+++ b/asli/index.html
@@ -92,7 +92,7 @@
     <div class="one">
         <h1>#1 Website Development Services</h1>
         <h3>Where you have a vision, we have a professional team to breathe life into it</h3>
-        <a href="know.html" class="hero-btn">Get Started</a>
+        <a href="get.html" class="hero-btn">Get Started</a>
         <h4>"Let us give life to your idea"</h4>
     </div>
 
