--- a/asli/index.html
+++ b/asli/index.html
@@ -74,7 +74,7 @@
  
 </section>
 ---->
-    <section class="free">
+<section class="free">
     <div>
         <img class="imag" src="images/kid.jpg" alt="">
     </div>
@@ -135,40 +135,35 @@
 <!-- service section starts  -->
 
 <section id="service" class="service">
-
-<h1 class="heading">Our Services</h1>
-
-<div class="row">
-
-  <div class="image">
-    <img src="images/Web.svg" alt="">
+  <div class="imagee">
+    <img src="images/web.jpg" alt="">
   </div>
   <div class="content">
-    <h3>Programming for Kids</h3>
-    <h1>"</h1>
-    <h2>Start where you are. Use what you have. Do what you can.</h2>
-    <h1>"</h1>
+    <h1>Programming for Kids</h1>
+    <h2>"Start where you are. Use what you have. Do what you can"</h2>
     <p>Today, in the computer age, not all schools teach coding in early childhood resulting in a major gap in the requirements of the new world and our children's skills. KashKoding introduces and prepares your kid from 6-18 years for this new coding world. Coding jobs are the future. With technology becoming all pervasive and developing at a rapid pace, coding is a skill that has become indispensable!</p>
     <a href="enroll.html"><button class="hero-btn">Explore Our Courses</button></a>
   </div>
 
-</div>
 
-<div class="row">
+</section>
+
+<section id="service" class="service">
+
+
 
   <div class="content">
-    <h3>Website Design and Development</h3>
-    <h1>"</h1>
-    <h2>Good websites get applause. Great websites get business.</h2>
-    <h1>"</h1>
+    <h1>Website Design and Development</h1>
+    <h2>"Good websites get applause. Great websites get business"</h2>
+    
     <p>Don’t let your website be just another URL on the web. We can help it be a powerful marketing medium to attract prospective customers. As a website development company having created in developing creative, conversion focused websites, we are well-poised to help your business make a mark online.</p>
     <a href="get.html"><button class="hero-btn">Explore Now </button></a>
   </div>
-  <div class="image">
-    <img src="images/mobilef.svg" alt="">
+  <div class="imagee">
+    <img src="images/webdev.jpg" alt="">
   </div>
 
-</div>
+
 
 
 
