--- a/asli/get.html
+++ b/asli/get.html
@@ -103,7 +103,7 @@
         <h2>Adfar Rashid</h2>
         <h3>Full Stack Developer</h3>
         <p>"Hi, I create the front door to the website. I take the wireframes designed by the team and give them life on my computer."</p>
-        <a href="" class="hero-btnn">Contact</a>
+        <a href="https://www.linkedin.com/in/adfar-rasheed-b16649206/" class="hero-btnn">Contact</a>
     </div>
      <div class="dev-sec">
         <img width="100px" height="100px" src="images/adfar.jpg" alt="">
@@ -113,18 +113,18 @@
         <a href="" class="hero-btnn">Contact</a>
     </div>
      <div class="dev-sec">
-        <img width="100px" height="100px" src="images/adfar.jpg" alt="">
+        <img width="100px" height="100px" src="images/zubair.jpeg" alt="">
         <h2>Zubair Rasool</h2>
         <h3>Front End Developer</h3>
         <p>"Hi, my part is to debug any issues in the appearances of the website. I turn the websites into responsive ones."</p>
-        <a href="" class="hero-btnn">Contact</a>
+        <a href="https://www.linkedin.com/in/zubair-ahmad-lone-23899b20a" class="hero-btnn">Contact</a>
     </div>
      <div class="dev-sec">
-         <img width="100px" height="100px" src="images/adfar.jpg" alt="">
+        <img width="100px" height="100px" src="images/suhail.jpeg" alt="">
         <h2>Suhail Bilal</h2>
          <h3>Back End Developer</h3>
         <p>"Hi, I handle everything that the user can't see. I control the data, store it, maintain it. My computer is always connected to a server."</p>
-        <a href="" class="hero-btnn">Contact</a>
+        <a href="https://www.linkedin.com/in/suhail-bilal-765487145" class="hero-btnn">Contact</a>
     </div>
 </div>
 </section>
