--- a/asli/know.html
+++ b/asli/know.html
@@ -58,7 +58,7 @@
     <div class="one">
         <h1>#1 Koshur coding platform for kids</h1>
         <h3>Live online classes to turn your kids into sharp thinkers and programmers</h3>
-        <h5>"Walew now hecho khin"</h5>
+        <h5>"Wàlew noü hecchaw kenh"</h5>
         <a href="registration.php" class="hero-btn">Book Your Free Demo Now</a>
         <h4>"It's more than just coding"</h4>
     </div>
